<resources>
    <string name="app_name">Image Blurrer</string>

    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_finish">Return</string>
    <string name="btn_local">Process Locally</string>
    <string name="btn_remote">Process Remotely</string>

    <string name="label_choose_image_processing">Choose Image Processing</string>
    <string name="label_choose_processing_location">Start Processing Locally or Remotely</string>
    <string name="label_processing_feedback">Processing Feedback</string>
    <string name="label_processing_used">Processing Used</string>
    <string name="label_before">Before</string>
    <string name="label_after">to</string>
    <string name="label_time_taken">Time Taken: 0s</string>

    <string name="label_proc_blur">Gaussian Blur σ: </string>
</resources>
